--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.WorkManager"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".worker.MainActivity"
             android:exported="true"
             android:label="WorkManagerInClass"
             android:theme="@style/Theme.WorkManager">
